fix: overflow in raw metastore info (#976)

--- a/querybook/webapp/components/DataTableViewOverview/DataTableViewOverview.scss
+++ b/querybook/webapp/components/DataTableViewOverview/DataTableViewOverview.scss
@@ -20,4 +20,7 @@
             }
         }
     }
+    .raw-metastore-info{
+        word-break: break-all;
+    }
 }
